--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 		<a href="contact.html">Contact Us</a>
 	</div>
 	<!--Header with image-->
-	<h1 style="text-align:center; color:fuchsia; font-family: chiller;">BIMS COOK</h1>
 	<div class="hero-image">
-		<div class="hero-text">
-			<h2 style="font-family: chiller;">Welcome to <b><i> Bims cook</i></b></h2>
+		<div class="hero-text"><h1 style="text-align:center; color:fuchsia; font-family: chiller; font-size: 70px;">BIMS COOK</h1>
+<h2 style="font-family: chiller;">Welcome to <b><i> Bims cook</i></b></h2>
 	<a href="menu.html"><button>what will you like to eat today?</button></a>
 		</div>
 <p>A world class food court set to offer mouth-watering Nigerian meals with artistic appeal.</p>
