--- a/contact.html
+++ b/contact.html
@@ -9,34 +9,37 @@
 	<body style="background-color: mistyrose">
 	<!--Navbar-->
 	<div class="topnav">
-		<a class="active" href="index.html">Home</a>
+		<a href="index.html">Home</a>
 		<a href="About.html">About Us</a>
 		<a href="menu.html">Menu</a>
 		<a href="prices.html">Prices</a>
-		<a href="contact.html">Contact Us</a>
+		<a class="active" href="contact.html">Contact Us</a>
 	</div>
 	<div>
 		<h2><center>SEND US A MESSAGE</center> </h2>
 	</div>
 	<div class="hero-image2">
-	<form>
+	<form class="form-style">
 		<div>
 			<label for="name"> Name:</label>
+			<br>
 			<input type="text" name="user_name">
 		</div>
 		<br>
 		<div> 
 			<label for="mail">Email:</label>
+			<br>
 			<input type="Email" name="user_mail">
 		</div>
 		<br>
 		<div>
 			<label for="msg"> Message:</label>
+			<br>	
 			<textarea name ="user_message"></textarea>
 		</div>
 		<br>
 		<div>
-			<button>send</button>
+			<button class="send">Send</button>
 		</div>
 	</div>
 	</form>
