--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
+
 <head>
 	<link rel="icon" type="favicon/png" href="img/Bimscooklogo.png">
 	<title>Home-Bims cook</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-	<body style="background-color: mistyrose">
+
+<body style="background-color: mistyrose">
 	<!--Navbar-->
 	<div class="topnav">
 		<a class="active" href="index.html">Home</a>
@@ -16,26 +17,37 @@
 		<a href="prices.html">Prices</a>
 		<a href="contact.html">Contact Us</a>
 	</div>
+
 	<!--Header with image-->
 	<div class="hero-image">
-		<div class="hero-text"><h1 style="text-align:center; color:fuchsia; font-family: chiller; font-size: 70px;">BIMS COOK</h1>
-<h2 style="font-family: chiller;">Welcome to <b><i> Bims cook</i></b></h2>
-	<a href="menu.html"><button>what will you like to eat today?</button></a>
-		</div>
-<p>A world class food court set to offer mouth-watering Nigerian meals with artistic appeal.</p>
-</div>
-<footer>
-	<p>GET IN TOUCH<br>Plot 13th King George v Road,Ikoyi,Lagos <br> +234-70890-90224 <br><a href="abimbolaolayeni@gmail.com">abimbolaolayeni@gmail.com</a><br></p><br></p>
+			<h2 class="welcome">Welcome to Bims coook</h2>
+			<p class="desc">A world class food court set to offer mouth-watering Nigerian meals with artistic appeal.</p>
+			<a href="menu.html">
+				<button class="btn">What will you like to eat today?</button>
+			</a>
+			
+	</div>
+
+	<footer>
+		<p>GET IN TOUCH
+			<br>Plot 13th King George v Road,Ikoyi,Lagos
+			<br> +234-70890-90224
+			<br>
+			<a href="abimbolaolayeni@gmail.com">abimbolaolayeni@gmail.com</a>
+			<br>
+		</p>
+		<br>
+		</p>
 		<p>GET SOCIAL</p>
-	<a href="https://web.facebook.com/Bimscook/" target="blank">
-		<img src="img/facebook.png" title="facebook" height="40" width="40">
-	</a>
-	<a href="https//instagram.com/Mz_fhadey" target="blank">
-		<img src="img/instagram.png" title="instagram" height="40" width="40">
-	</a>
-	<p>&copy;2018 Bims cook. All rights reserved| Developed by BeingBola.</p>
-	
-</footer>
+		<a href="https://web.facebook.com/Bimscook/" target="blank">
+			<img src="img/facebook.png" title="facebook" height="40" width="40">
+		</a>
+		<a href="https//instagram.com/Mz_fhadey" target="blank">
+			<img src="img/instagram.png" title="instagram" height="40" width="40">
+		</a>
+		<p>&copy;2018 Bims cook. All rights reserved| Developed by BeingBola.</p>
+
+	</footer>
 
 
 </body>
