--- a/menu.html
+++ b/menu.html
@@ -9,9 +9,9 @@
 	<body style="background-color: mistyrose">
 	<!--Navbar-->
 	<div class="topnav">
-		<a class="active" href="index.html">Home</a>
+		<a href="index.html">Home</a>
 		<a href="About.html">About Us</a>
-		<a href="menu.html">Menu</a>
+		<a class="active" href="menu.html">Menu</a>
 		<a href="prices.html">Prices</a>
 		<a href="contact.html">Contact Us</a>
 	</div>```
