--- a/prices.html
+++ b/prices.html
@@ -20,7 +20,7 @@
 <!--menu-->
 <section style="background-color: Burlywood">
 	<div>
-		<table border="1" style="width: 100% ">
+		<table>
 			<tr>
 				<th>Menu</th>
 				<th>price(Naira)</th>
@@ -35,7 +35,7 @@
 			</tr>
 		</table>
 		<br>
-		<table border="1" style="width: 100% ">
+		<table>
 			<tr>
 				<th>SMOOTHIES</th>
 				<th>price(Naira)</th>
@@ -59,7 +59,7 @@
 	</tr>
 </table>
 <br>
-<table border="1" style="width: 100% ">
+<table>
 	<tr>
 		<th>BREAD</th>
 		<th>price(Naira)</th>
@@ -74,7 +74,7 @@
 </tr>
 </table>
 <br>
-<table border="1" style="width: 100% ">
+<table>
 	<tr>
 	<th>Appetizer</th>
 	<th>price(Naira)</th>
@@ -85,7 +85,7 @@
 </tr>
 </table>
 <br>
-<table border="1" style="width: 100% ">
+<table>
 	<tr>
 		<th>Main Course</th>
 		<th>price(Naira)</th>
