--- a/prices.html
+++ b/prices.html
@@ -20,6 +20,7 @@
 <!--menu-->
 <section style="background-color: Burlywood">
 	<div>
+		<div class="table1">
 		<table>
 			<tr>
 				<th>Menu</th>
@@ -34,8 +35,10 @@
 				<td>N1,000</td>
 			</tr>
 		</table>
+	</div>
 		<br>
 		<table>
+
 			<tr>
 				<th>SMOOTHIES</th>
 				<th>price(Naira)</th>
