--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
 <head>
 	<link rel="icon" type="favicon/png" href="img/Bimscooklogo.png">
-	<title>Home-Bims cook</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-compatibe" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="">
+	<title>Home-Bims cook</title>
 </head>
+
 
 <body style="background-color: mistyrose">
 	<!--Navbar-->
@@ -27,17 +30,47 @@
 			</a>
 			
 	</div>
+	<br>
+	<body>
+		<div class="index">
+			<a href="menu.html">
+				<img src="img/checkmenu.png" alt="">
+				<h2> Check Out Our Menu</h2>
+				<p>We have all your favorites. Taste all our menu !</p>
+			</a>
+		</div>
+		<div class="index">
+			<a href="contact.html">
+				<img src="img/Reserve.jpg" alt="">
+				<h2>Make Reservations/Enquiries </h2>
+				<p>Reach out to us for your Orders,Table reservations ,Enquiries and Complains</p>
+			</a>
+		</div>
+		<div class="index">
+			<a href="About.html">
+				<img src="img/Bimscooklogo.png" alt="">
+				<h2> Our Story/Services</h2>
+				<p> Our brand is created with you in mind .</p>
+				</a>
+			</div>
+		
+	</body>
 
 	<footer>
+		<div class="foot">
 		<p>GET IN TOUCH
 			<br>Plot 13th King George v Road,Ikoyi,Lagos
 			<br> +234-70890-90224
 			<br>
+			<span class="foot a">
 			<a href="abimbolaolayeni@gmail.com">abimbolaolayeni@gmail.com</a>
 			<br>
+		</span>
 		</p>
 		<br>
 		</p>
+	</div>
+	<div class="foot">
 		<p>GET SOCIAL</p>
 		<a href="https://web.facebook.com/Bimscook/" target="blank">
 			<img src="img/facebook.png" title="facebook" height="40" width="40">
@@ -45,11 +78,9 @@
 		<a href="https//instagram.com/Mz_fhadey" target="blank">
 			<img src="img/instagram.png" title="instagram" height="40" width="40">
 		</a>
+	</div>
+	<div class="foot2">
 		<p>&copy;2018 Bims cook. All rights reserved| Developed by BeingBola.</p>
+	</div>
 
 	</footer>
-
-
-</body>
-
-</html>
